[gd_scene load_steps=2 format=3 uid="uid://difnmx527n7co"]

[ext_resource type="Script" path="res://scripts/map/enemy_wave/wave_controller.gd" id="1_2oer0"]

[node name="WaveController" type="Node"]
script = ExtResource("1_2oer0")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="NextWaveDelayTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="NextWaveDelayTimer" to="." method="_on_next_wave_delay_timer_timeout"]
